# mafia

./: README.md  metadata.json  package.json
apps/bot/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/bot/app/: main.py
apps/bot/app/bot/: __init__.py  callbacks.py  handlers.py  presets.py  utils.py
apps/bot/app/bot/keyboards/: admin_panel.py  day_vote.py  lobby.py  night_action.py
apps/bot/app/bot/renderers/: admin_panel.py  check_result.py  day_vote.py  day_vote_result.py  game.py  lobby.py  night_action.py  phase.py  role.py
apps/bot/app/bot/routers/: __init__.py  admin.py  day_vote.py  lobby.py  private.py
apps/bot/app/bot/services/: __init__.py  game_tick.py  mafia_chat.py  night_actions.py  permissions.py  phase_notifier.py
apps/bot/app/core/: __init__.py  config.py  logging.py
apps/bot/app/core/game/: __init__.py  actions.py  (+9 more)
apps/bot/app/infrastructure/: __init__.py  container.py  database.py  redis.py
apps/bot/app/workers/: __init__.py  phase_worker.py  protocols.py
apps/bot/migrations/: env.py
apps/bot/migrations/versions/: 0001_initial.py
apps/bot/tests/: test_bot_ui.py  test_config.py  test_day_resolver.py  test_game_actions.py  test_game_assignment.py  test_game_engine.py  test_game_events.py  test_game_locks.py  test_game_models.py  test_game_roles.py  test_game_tick_service.py  test_infrastructure.py  test_night_resolver.py  test_phase_notification_repository.py  test_phase_worker.py  test_player_game_repository.py  test_redis_repositories.py  test_repositories.py  test_victory.py
apps/bot/tests/fakes/: redis.py
(+21 files in other folders)
